--- a/client/src/components/stylesheets/SchedulePage.css
+++ b/client/src/components/stylesheets/SchedulePage.css
@@ -10,91 +10,72 @@ h4 {
   text-align: center;
 }
 
+#calendarContainer {
+    display: grid;
+    grid-template: repeat(3,1fr) 0.5fr repeat(auto-fit,1fr) / repeat(7,1fr);
+    /*border: 5px solid red;*/
+    max-height: 800px;
+    margin: 5px;
+    background: #F5F5F5;
+}
+
 .month {
     padding: 70px 25px;
     width: 100%;
-    background: #1abc9c;
+    background: orange;
     text-align: center;
-    /* border: 5px solid red; */
-    /* height: 20em; */
-    /* display: grid;
-    grid-template: repeat(3, 1fr) / repeat(5, 1fr); */
+    grid-area: 1 / 1 / 4 / 8;
+    /*border-radius: 3px;*/
+    /*border: 5px solid red;*/
 }
 
-.month ul {
+.month div {
     margin: 0;
     padding: 0;
 }
 
-.month ul li {
+.month div div {
     color: white;
     font-size: 20px;
     text-transform: uppercase;
     letter-spacing: 3px;
 }
 
-.month .prevMonth {
+.prevMonth {
     float: left;
     padding-top: 10px;
 }
 
-.month .nextMonth {
+.nextMonth {
     float: right;
     padding-top: 10px;
 }
 
 .weekdays {
-    margin: 0;
+    margin-bottom: 2px;
     padding: 10px 0;
-    background-color: #ddd;
-}
-
-.weekdays li {
-    display: inline-block;
-    width: 13.85%;
-    color: #666;
+    background-color: #BEBEBE;
+    color: #505050;
     text-align: center;
     /*border: solid 0.1px black;*/
 }
 
 .days {
-    padding: 10px 0 0 10px;
-    background: #eee;
-    margin: 0;
+    padding: 5px 0 0 5px;
+    background: #ddd;
+    margin: 2px;
+    height: 80px;
+    border-radius: 3px;
+    /*border: 1px solid red;*/
 }
 
-.days li {
-    list-style-type: none;
-    display: inline-block;
-    width: 14.2%;
-    text-align: left;
+.days span {
     vertical-align: top;
-    margin-bottom: 15px;
-    font-size: 12px;
-    color: #777;
-    /*border: solid 0.1px black*/
-    /* float: right; */
+    font-size: 10px;
+    font-weight: 500;
 }
 
-.days li .active {
-    padding: 5px;
-    background: #1abc9c;
-    color: white !important
-}
-
-.days li .oneDigit {
-    margin-right: 8px;
-}
-
-.days li span {
-    vertical-align: top;
-}
-
-.days li textarea {
-    width: 88%;
-    /* height: 100%; */
-    height: 5em;
-    resize: none;
+.inactive {
     background: #eee;
 }
 
@@ -102,7 +83,7 @@ h4 {
     border: none;
     outline: none;
     height: 40px;
-    background: #1abc9c;
+    background: orange;
     color: #fff;
     font-size: 18px;
     border-radius: 20px;
