--- a/client/src/components/stylesheets/Login.css
+++ b/client/src/components/stylesheets/Login.css
@@ -12,7 +12,7 @@
     height: 500px;
     background: #000;
     color: #fff;
-    top: 60%;
+    top: 45%;
     left: 50%;
     position: absolute;
     transform: translate(-50%,-50%);
@@ -44,9 +44,10 @@ h1 {
 .loginbox input {
     width: 100%;
     margin-bottom: 20px;
+    padding: 1px;
 }
 
-.loginbox input[type="text"], input[type="password"] {
+.loginbox input[type="text"], input[type="password"], input[type="email"] {
     border: none;
     border-bottom: 1px solid #fff;
     background: transparent;
@@ -59,6 +60,7 @@ h1 {
 .loginbox .button {
     border: none;
     outline: none;
+    width: 100px;
     height: 40px;
     background: rgb(244, 115, 66);
     color: #fff;
@@ -73,18 +75,103 @@ h1 {
     color: #000;
 }
 
-.loginbox a {
-    text-decoration: none;
-    font-size: 12px;
-    line-height: 20px;
-    color: darkgrey;
-}
-
-.loginbox a:hover {
-    color: #ffc107;
-}
-
 #messageArea {
     text-align: center;
     color: darkorange;
+}
+
+
+.can-toggle {
+    position: relative;
+    margin-bottom: 20px;
+}
+.can-toggle *, .can-toggle *:before, .can-toggle *:after {
+    box-sizing: border-box;
+}
+.can-toggle input[type="checkbox"] {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.can-toggle input[type="checkbox"][disabled] ~ label {
+    pointer-events: none;
+    color: rgba(119, 119, 119, 0.5);
+}
+.can-toggle input[type="checkbox"][disabled] ~ label .can-toggle__switch {
+    opacity: 0.4;
+}
+.can-toggle input[type="checkbox"]:checked ~ label .can-toggle__switch:before {
+    content: attr(data-unchecked);
+    left: 0;
+}
+.can-toggle input[type="checkbox"]:checked ~ label .can-toggle__switch:after {
+    content: attr(data-checked);
+    color: darkorange;
+    margin: 0 30px;
+    -webkit-transform: translate3d(65px, 0, 0);
+    transform: translate3d(65px, 0, 0);
+}
+.can-toggle label {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    position: relative;
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+}
+.can-toggle label .can-toggle__switch {
+    position: relative;
+    margin: auto;
+    -webkit-transition: background-color 0.3s cubic-bezier(0, 1, 0.5, 1);
+    transition: background-color 0.3s cubic-bezier(0, 1, 0.5, 1);
+    background: darkorange;
+    height: 36px;
+    -webkit-box-flex: 0;
+    flex: 0 0 200px;
+    border-radius: 4px;
+}
+.can-toggle label .can-toggle__switch:before {
+    content: attr(data-checked);
+    position: absolute;
+    top: 0;
+    text-transform: uppercase;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.5);
+    left: 67px;
+    font-size: 12px;
+    line-height: 36px;
+    width: 100px;
+}
+.can-toggle label .can-toggle__switch:after {
+    content: attr(data-unchecked);
+    position: absolute;
+    z-index: 5;
+    text-transform: uppercase;
+    text-align: center;
+    background: white;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    -webkit-transition: -webkit-transform 0.3s cubic-bezier(0, 1, 0.5, 1);
+    transition: -webkit-transform 0.3s cubic-bezier(0, 1, 0.5, 1);
+    transition: transform 0.3s cubic-bezier(0, 1, 0.5, 1);
+    color: darkorange;
+    top: 2px;
+    left: 2px;
+    border-radius: 2px;
+    width: 100px;
+    line-height: 32px;
+    font-size: 12px;
+}
+.can-toggle input[type="checkbox"]:not(:checked) ~ label .can-toggle__switch:before {
+    margin: 0 35px;
+}
+.can-toggle input[type="checkbox"]:checked ~ label .can-toggle__switch {
+    background-color: darkorange;
+}
+.can-toggle label {
+    font-size: 14px;
 }
